# bloomia

./: .dockerignore  .env.example  .env.template  .gitignore  .railwayignore  Dockerfile  Dockerfile.backend  Dockerfile.backend-root  README.md  docker-compose.yml  package-lock.json  projectTree.txt  railway.json
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.backend-root  Dockerfile.migrate  Dockerfile.railway  RAILWAY_CONFIG.md  README.md  _go.mod.tmp  _go.sum.tmp  docker-compose.dev.yml  dummy_server.go  env.example  init-db.sql  main.go  nixpacks.toml  railway.json  railway.migrate.json  railway.toml
backend/cmd/admincli/: main.go
backend/cmd/migrate/: main.go
backend/cmd/server/: main.go
backend/internal/app/: app.go
backend/internal/database/: database.go
backend/internal/domain/entities/: admin.go  dashboard.go  user.go
backend/internal/domain/repositories/: user.go
backend/internal/infrastructure/config/: config.go
backend/internal/infrastructure/database/: postgres.go  redis.go
backend/internal/infrastructure/firebase/: firebase.go
backend/internal/redis/: redis.go
backend/internal/usecase/: admin_usecase.go  auth_usecase.go  dashboard_usecase.go  school_usecase.go
backend/middleware/: jwt.go
backend/migrations/: 20240913000001_initial_schema.sql
backend/platform/authenticator/: auth.go
backend/platform/middleware/: isAuthenticated.go
backend/platform/router/: router.go
backend/scripts/: dev-migrate.sh  init-db.sql  migrate.sh
backend/web/template/: home.html  user.html
database/: init.sql  (+2 more)
(+113 files in other folders)
