[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Webフレームワーク
axum = "0.7"

# 非同期ランタイム
tokio = { version = "1.38", features = ["full"] }

# PostgreSQL用ORM (SQL直書き型だが型安全)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }

# Redisクライアント
redis = { version = "0.24" }

# 環境変数読み込み
dotenvy = "0.15"

# シリアライザ（JSON変換など）
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# エラーハンドリング用
thiserror = "1.0"

# ログ出力 (今後追加可能)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
